--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,10 +16,12 @@
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.SEARCH" /><action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+               	
             </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                              android:resource="@xml/searchable"/>
         </activity>
     </application>
 
