--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.dragon.vince"
-    android:versionCode="6"
-    android:versionName="6.0" >
+    android:versionCode="7"
+    android:versionName="7.0" >
 
     <uses-sdk android:minSdkVersion="15" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,7 +11,8 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:debuggable="false" >
         <activity
             android:name=".DanyActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
