--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.dragon.vince"
-    android:versionCode="7"
-    android:versionName="7.0" >
+    android:versionCode="8"
+    android:versionName="8.0" >
 
     <uses-sdk android:minSdkVersion="15" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,7 +12,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:debuggable="false" >
+        android:debuggable="true" >
         <activity
             android:name=".DanyActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
