--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:debuggable="true" >
+        android:debuggable="false" >
         <activity
             android:name=".DanyActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
